# stm32-adc-dma

./: CMakeLists.txt  Kconfig  README.rst  prj.conf
apps/: Kconfig
boards/: nucleo_l4r5zi.overlay
drivers/: CMakeLists.txt  Kconfig
drivers/adc/: CMakeLists.txt  Kconfig  adc_stm32_dma.c
dts/bindings/adc/: st,stm32-adc-dma.yaml
samples/atan/: CMakeLists.txt  prj.conf
samples/atan/src/: main.c
samples/dac/: CMakeLists.txt  prj.conf
samples/dac/boards/: nucleo_l4r5zi.overlay
samples/dac/src/: main.c
src/: main.c
stm32-external-drivers/: CMakeLists.txt  Kconfig
stm32-external-drivers/apps/: CMakeLists.txt  Kconfig  adc_uart.c
stm32-external-drivers/drivers/: CMakeLists.txt  Kconfig
stm32-external-drivers/drivers/adc/: Kconfig  adc_stm32_dma.c
stm32-external-drivers/drivers/dac/: CMakeLists.txt  Kconfig  dac_stm32_dma.c
stm32-external-drivers/drivers/hwtrig/: CMakeLists.txt  Kconfig
stm32-external-drivers/dts/bindings/dac/: st,stm32-dac-dma.yaml
stm32-external-drivers/dts/bindings/pwm/: st,stm32-pwm-trig.yaml
stm32-external-drivers/include/drivers/: dac_ext.h
stm32-external-drivers/include/dt-bindings/adc/: stm32_adc_dma.h
stm32-external-drivers/include/math/: fast_atan.h
stm32-external-drivers/include/syscalls/: dac_ext.h  hwtrig.h
stm32-external-drivers/math/: CMakeLists.txt  Kconfig  fast_atan.c
stm32-external-drivers/src/: adc_stm32_dma.c  pwm_stm32_trig.c
stm32-external-drivers/subsys/fs/: CMakeLists.txt  shell.c
stm32-external-drivers/zephyr/: module.yml
